k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: forgerock
    name: forgerock
  name: forgerock
