k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock-ticker
  name: stock-ticker
  namespace: forgerock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-ticker
  template:
    metadata:
      labels:
        app: stock-ticker
    spec:
      containers:
      - name: app
        image: stock-ticker:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: default
          protocol: TCP
        resources: {}
      #   volumeMounts:
      #   - mountPath: /here
      #     name: very-secret
      #     readOnly: true
      # volumes:
      # - name: very-secret
      #   secret:
      #     defaultMode: 420
      #     secretName: stock-ticker
