k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2$3
  name: forgerock-local
  namespace: forgerock
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: stock-ticker-svc
            port:
              number: 8000
        path: /stock-ticker(/|$)(.*)
        pathType: Prefix
